_sass/modules/_m-header.scss
.m-header {
  background-color: $color-blue;
  border-top: 8px solid $color-teal;
  color: #fff;
  font-size: .8em;
  position: relative;
  z-index: 1;
  .l-wrapper-large {
    @media(min-width: $break-medium) {
      @include flexbox;
      @include flex-wrap(wrap);
      @include justify-content(space-between);
    }
    padding: 8px 16px;
  }
  a {
    color: currentColor;
    letter-spacing: .03em;
    text-decoration: none;
    text-transform: uppercase;
    &:hover {
      color: $color-teal;
    }
  }
  &__logo {
    @include flex-basis(150px);
    @include flex-grow(1);
    @include flex-shrink(0);
    display: block;
    margin: 0 auto;
    max-width: 150px;
  }

  &__links {
    @include align-self(center);
    @include flex-grow(1);
    display: block;
    text-align: right;
    li {
      display: inline-block;
      padding: 5px;
    }
    @media(max-width: $break-medium) {
      margin-top: 10px;
      text-align: center;
    }
  }
}

